# frontend

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  NP-Tennis.spec  README.md  build.py  pyproject.toml  tasks.ps1
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_release.yml  codeql.yml  create_release.yml
src/tuiapp/: app.py  main.py  settings.py  theme.py  themes.py
src/tuiapp/api/: client.py  errors.py  schema.py  status.py
src/tuiapp/api/account/: account.py  schema.py
src/tuiapp/api/auth/: auth.py  auth_guard.py  schema.py  token_manager.py
src/tuiapp/api/court/: court.py  schema.py
src/tuiapp/api/status/: schema.py  status.py
src/tuiapp/screens/: base.py  base_screen.py  court_screen.py  forgot_password_screen.py  hub_screen.py  login_screen.py  main.py  main_screen.py  profile_screen.py  register_page.py  register_screen.py
src/tuiapp/styles/: buttons.tcss  court_screen.tcss  courts.tcss  forgot_password_screen.tcss  header.tcss  login.tcss  login_screen.tcss  main.tcss  main_screen.tcss  modals.tcss  profile_screen.tcss  register.tcss  register_screen.tcss  styles.tcss  views.tcss
src/tuiapp/widgets/: __init__.py  buttons.py  header.py  inputs.py  login_buttons.py  login_form.py  register_form.py  toast.py
src/tuiapp/widgets/courts/: card_container.py  court_card.py
src/tuiapp/widgets/forms/: __init__.py  forgot_password_form.py  form_input.py  login_form.py  new_password_form.py  register_form.py
src/tuiapp/widgets/modals/: base_modal.py  confirmation_modal.py  delete_account_modal.py  password_hints_modal.py  status_modal.py
src/tuiapp/widgets/views/: base_view.py  court_view.py  personal_information_view.py  security_view.py
