[project]
name = "tui-frontend"
version = "0.1.0"
description = "Async Textual TUI frontend"
authors = [{ name = "Your Team" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "textual>=0.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# =====================================================
# RUFF
# =====================================================

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "ASYNC", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tuiapp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =====================================================
# MYPY (Strict but Practical)
# =====================================================

[tool.mypy]
python_version = "3.11"
# Relax strict mode
strict = false

# Optional individual relaxations
disallow_untyped_defs = false # allow functions without type hints
check_untyped_defs = false    # don’t check inside untyped functions
warn_unused_ignores = false   # don’t warn about # type: ignore
no_implicit_optional = false  # allow Optional without explicit annotation

# =====================================================
# PYTEST
# =====================================================

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
